--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body::-webkit-scrollbar       {background-color:white;width:15px}
+body::-webkit-scrollbar-track {background-color:white}
+body::-webkit-scrollbar-thumb {background-color:#a0a0a5;border-radius:16px;border:4px solid white}
+body::-webkit-scrollbar-thumb:hover {background-color:black}
